# Showdown

./: CMakeLists.txt  README.md  main.cpp  shader.fs
assets/pipeline/: shape.json  texture.json
assets/shader/default/shape/: fragment.fs  vertex.vs
assets/shader/default/texture/: fragment.fs  vertex.vs
include/gl/: Buffer.hpp  Program.hpp  Shader.hpp  Texture.hpp  Type.hpp  Uniform.hpp  VertexArray.hpp
include/glfw/: Window.hpp
include/graphics/: Color.hpp  Drawable.hpp  Pipeline.hpp  Projector.hpp  Shape.hpp  Sprite.hpp  Texture.hpp  Transformable.hpp  Window.hpp
include/graphics/pipeline/: ShapePipeline.hpp  SpritePipeline.hpp  TexturePipeline.hpp
include/graphics/projector/: OrthographicProjector.hpp
include/graphics/shape/: Rectangle.hpp
include/input/: Joystick.hpp  Keyboard.hpp  Mouse.hpp
include/math/: math.hpp  matrix.hpp  swizzle.hpp  vector.hpp  vector.inl  vector1.hpp  vector1.inl  vector2.hpp  vector2.inl  vector3.hpp  vector3.inl  vector4.hpp  vector4.inl  vectormeta.hpp  vectorutils.hpp
include/ressource/: Manager.hpp  Registry.hpp  RegistryKey.hpp  file.hpp
include/utils/: Chunk.hpp  Clip.hpp  Debug.hpp  Pipeline.hpp  Program.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
src/: __head.cpp
src/gl/: Buffer.cpp  Program.cpp  Shader.cpp  Texture.cpp  Type.cpp  Uniform.cpp  VertexArray.cpp
src/glfw/: Window.cpp
src/graphics/: Pipeline.cpp  Shape.cpp  Sprite.cpp  Texture.cpp  Transformable.cpp  Window.cpp
src/graphics/pipeline/: ShapePipeline.cpp  SpritePipeline.cpp  TexturePipeline.cpp
src/graphics/projector/: OrthographicProjector.cpp
src/graphics/shape/: Rectangle.cpp
src/ressource/: FileRegistry.cpp  Manager.cpp  RegistryKey.cpp
src/utils/: Chunk.cpp  Clip.cpp  Debug.cpp  Pipeline.cpp  Program.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
